tarmac/new_pattern24/kubernetes/applications/ps/overlays/environments/qa/app-ps-tenant-grpc-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:063890802877:certificate/2391662d-2fa0-4878-b56b-8a8c25444613
    alb.ingress.kubernetes.io/group.name: ps
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 50052}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/tags: Environment=qa,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app.kubernetes.io/instance: ps
  name: app-tenant-grpc-service
  namespace: ps
spec:
  defaultBackend:
    service:
      name: app-ps-tenant-grpc-service
      port:
        name: grpc
  ingressClassName: alb
